...
"UserModuleErrorCode.PhoneError"      = "手机号码错误";
"UserModuleErrorCode.EmailError"      = "邮箱格式错误";
"UserModuleErrorCode.PasswdError"     = "密码6位数或密码大于16位数";
"UserModuleErrorCode.SecurityError"   = "验证码错误";
"UserModuleErrorCode.UserNameError"   = "用户名格式错误";
"UserModuleErrorCode.PhoneNil"        = "手机号码不能为空";
"UserModuleErrorCode.EmailNil"        = "邮箱不能为空";
"UserModuleErrorCode.PasswdNil"       = "密码不能为空";
"UserModuleErrorCode.SecurityNil"     = "验证码不能为空";
"UserModuleErrorCode.UserNameNil"     = "用户名不能为空";
"UserModuleErrorCode.UserIdNil"       = "用户Id不能为空";
"UserModuleErrorCode.UnknownError"    = "未知错误";
"UserModuleErrorCode.FriendIdNil"     = "好友Id不能为空";
"UserModuleErrorCode.SearchTypeNil"   = "搜索类型不能为空";
"UserModuleErrorCode.ParaNil"         = "参数有误";
"UserModuleErrorCode.ParaError"       = "参数有误";
"UserModuleErrorCode.LBSNil"          = "LBS不能为空";
"UserModuleErrorCode.PhoneNumListNil" = "电话号码列表不能为空";
"UserModuleErrorCode.ImageParseFail"  = "图片转换失败";

// 首页
"MainPage.SignInBtn"       = "登录";
"MainPage.SignUpBtn"       = "加入豚鼠";

// 登录页面
"SignIn.SignInBtn"         = "登录";
"SignIn.UserNameTextField" = "手机/邮箱";
"SignIn.PasswdTextField"   = "密码";
"SignIn.title"             = "准备开始";
"SignIn.SignUpItemBtn"     = "注册";
"SignIn.ForgotPasswdBtn"   = "忘记了密码？";

// 注册页面
"SignUp.PhoneRightItemBtn"   = "邮箱";
"SignUp.EmailRightItemBtn"   = "手机";
"SignUp.Title"               = "加入豚鼠";
"SignUp.PhoneNumTextField"   = "手机";
"SignUp.EmailTextField"      = "邮箱";
"SignUp.SafetyCodeTextField" = "验证码";
"SignUp.SendSafetyCode"      = "发送验证码";
"SignUp.ProcotolViewTitle"   = "我们已经阅读并接受";
"SignUp.ProcotolViewBtn"     = "《豚鼠科技服务协议》";
"SignUp.SignUpBtn"           = "注册";
"SignUp.ReadProcotol"        = "请先阅读《豚鼠科技服务协议》";
"SignUp.ReSignUp"            = "重新注册";
"SignUp.DirectSinIn"         = "直接登录";

// 引导页
"Guide.MyInfo"                = "我的信息";
"Guide.Mine"                  = "我是";
"Guide.Birthday"              = "生日";
"Guide.Height"                = "身高";
"Guide.Weight"                = "体重";
"Guide.Goal"                  = "目标";
"Guide.GoalStep"              = "计步";
"Guide.GoalSleep"             = "睡眠";
"Guide.Step"                  = "步";
"Guide.Average"               = "平均";
"Guide.Recommend"             = "推荐";
"Guide.Introduce"             = "可以更好的帮助健康统计哦！";
"Guide.Minute"                = "分钟";
"Guide.Hour"                  = "小时";

"Guide.Setting"               = "设置";
"Guide.PassButton"            = "跳过";
"Guide.OpenNotice"            = "开启智能通知";
"Guide.OpenNoticeInfo"        = "随时关注我的健康生活";
"Guide.OpenLocationShare"     = "开启位置共享";
"Guide.OpenLocationShareInfo" = "告诉豚鼠你的位置，更有安全服务！";

"Guide.LinkCavy"              = "连接手环";
"Guide.OpenBluetooth"         = "打开蓝牙";
"Guide.OpenBluetoothInfo"     = "手机蓝牙打开后才能成功连接手环";
"Guide.OpenCavy"              = "绑定手环";
...
"Home.Weather.AirPollution.Mild"       = "轻度污染";
"Home.Weather.AirPollution.Middle"     = "中度污染";
"Home.Weather.AirPollution.Bad"        = "重度污染";
"Home.TimeLine.Cell.Sleep"             = "睡眠";
"Home.TimeLine.Cell.Step"              = "计步";
"Home.TimeLine.Cell.PK"                = "PK";
"Home.TimeLine.Cell.Achive"            = "成就";
"Home.TimeLine.Cell.Healthiy"          = "健康";
"Home.TimeLine.Achive.Badge"           = "累计";
"Home.TimeLine.PK.Lead"                = "领先";
"Home.TimeLine.PK.Back"                = "落后";
"Home.TimeLine.PK.Win"                 = "胜利了!";
"Home.TimeLine.PK.Lose"                = "失败了!";
"Home.TimeLine.Healthy.Care"           = "需要关怀";
"Home.LifeList.Title.Target"           = "目标";
"Home.LifeList.Title.InfoOpen"         = "信息公开";
"Home.LifeList.Title.Friend"           = "好友";
"Home.LifeList.Title.PK"               = "PK";
"Home.LifeList.Title.About"            = "关于";
"Home.LifeList.Title.Help"             = "帮助与反馈";
"Home.LifeList.Title.Related"          = "体感应用";
"Home.RightList.Title.Camera"          = "遥控相机";
"Home.RightList.Title.Notification"    = "来电提醒";
...
"Chart.Sleep.Degree.Deep"  = "深度";
"Chart.Sleep.Degree.Light" = "浅度";
"Chart.Sleep.Average."     = "日均睡眠";
"Share.To"                 = "分享到";

//好友，联系人
"Contacts.ListCell.Cavy"               = "生活豚鼠";
"Contacts.SearchBar.Search"            = "搜索";
"Contacts.Title"                       = "联系人";
"Contacts.NewFriendsCell"              = "新的朋友";
"Contacts.AddFriendsCell"              = "添加好友";
"Contacts.SearchplaceHolder"           = "  搜索你得联系人";
"Contacts.ListCell.Delete"             = "删除";
"Contacts.ListCell.Care"               = "关注";
"Contacts.ListCell.UndoCare"           = "取消关注";
"Contacts.ListCell.Add"                = "添加";
"Contacts.ListCell.Agree"              = "同意";
"Contacts.ListCell.AlreaydAdd"         = "已发送";
"Contacts.Search.PhoneNum"             = "通讯录好友";
"Contacts.Search.RecommendNum"         = "推荐好友";
"Contacts.Search.NearbyNum"            = "附近好友";
"Contacts.Search.placeHolder"          = "  搜索新的好友";
"Contacts.Search.dropRefresh"          = "下拉换一批";
"Contacts.Request.placeHolder"         = "发送验证申请，等待对方通过";
"Contacts.Request.SendButton"          = "发送";
"Contacts.ShowInfo.city"               = "城市";
"Contacts.ShowInfo.Address"            = "地址";
"Contacts.ShowInfo.old"                = "年龄";
"Contacts.ShowInfo.Gender"             = "性别";
"Contacts.Gender.Girl"                 = "女";
"Contacts.Gender.Boy"                  = "男";
"Contacts.ShowInfo.NotesName"          = "设置备注";
"Contacts.ShowInfo.TransformNotes"     = "点击修改备注";
"Contacts.ShowInfo.Height"             = "身高";
"Contacts.ShowInfo.Weight"             = "体重";
...
"Contacts.EmptyView.AddressBookInfo"   = "手机通讯录中的好友中\n还没加入豚鼠";
"Contacts.ChangeNickName.NavTitle"     = "昵称";
"Contacts.ChangeAddress.NavTitle"      = "地址";

//账户信息
"AccountInfo.Title"                      = "账户信息";
"AccountInfo.LoginoutButton.Title"       = "退出登录";
"AccountInfo.Photo"                      = "从手机相册中选择";
"AccountInfo.Camera"                     = "拍照";
"AccountInfo.ChangeNickname.Placeholder" = "输入昵称";
"AccountInfo.ChangeAddress.Placeholder"  = "输入地址";
"AccountInfo.AchieveView.NumPrefix"      = "您已累计行走";

...
