...

extension UIImage {
  enum Asset: String {
    case AlarmClockAdd = "AlarmClockAdd"
    case AlarmClockEmotyIcon = "AlarmClockEmotyIcon"
    case AlarmClockNavSave = "AlarmClockNavSave"
    case Backbtn = "backbtn"
    case Banner_1 = "banner_1"
    case Banner_2 = "banner_2"
    case Banner_3 = "banner_3"
    case Banner_home = "banner_home"
    case CameraFlashAuto = "CameraFlashAuto"
    case CameraFlashClosed = "CameraFlashClosed"
    case CameraFlashOpen = "CameraFlashOpen"
    case CameraTakePhoto = "CameraTakePhoto"
    case CameraTurnCamera = "CameraTurnCamera"
    case CameraVideoShot = "CameraVideoShot"
    case CameraVideoStart = "CameraVideoStart"
    case CameraVideoWait = "CameraVideoWait"
    case Chosenbtn = "chosenbtn"
    case ContactBlankPage = "ContactBlankPage"
    case ContactsAccountEditButton = "ContactsAccountEditButton"
    case ContactsAddrssBookNormal = "ContactsAddrssBookNormal"
    case ContactsAddrssBookSelected = "ContactsAddrssBookSelected"
    case ContactsCare = "ContactsCare"
    case ContactsInfoAdd = "ContactsInfoAdd"
    case ContactsInfoAddHighLight = "ContactsInfoAddHighLight"
    case ContactsListCavy = "ContactsListCavy"
...
    case GuideFlagV = "GuideFlagV"
    case GuideFlashBtn = "GuideFlashBtn"
    case GuideFlashBtnHighLight = "GuideFlashBtnHighLight"
    case GuideGenderBoyChosen = "GuideGenderBoyChosen"
    case GuideGenderBoyGary = "GuideGenderBoyGary"
    case GuideGenderGirlChosen = "GuideGenderGirlChosen"
    case GuideGenderGirlGary = "GuideGenderGirlGary"
    case GuideLocation = "GuideLocation"
    case GuideNotice = "GuideNotice"
    case GuideOpenBand = "GuideOpenBand"
    case GuidePairFail = "GuidePairFail"
    case GuidePairSeccuss = "GuidePairSeccuss"
    case GuideRightBtn = "GuideRightBtn"
    case GuideRightBtnHighLight = "GuideRightBtnHighLight"
    case GuideWeightBg = "GuideWeightBg"
    case GuideWeightNiddle = "GuideWeightNiddle"
    case HomeBandMenu = "HomeBandMenu"
    case HomeDisBandMenu = "HomeDisBandMenu"
    case HomeLeftMenu = "HomeLeftMenu"
    case HomeListHonor = "HomeListHonor"
    case HomeListPK = "HomeListPK"
    case HomeListSleep = "HomeListSleep"
    case HomeListStep = "HomeListStep"
    case HomeNavLeftItem = "HomeNavLeftItem"
    case HomeNavRightItem = "HomeNavRightItem"
...
