...
    var name: String
    var introudce: String { return " 我爱吃草莓啊~~~" }
    var requestBtnTitle: String { return L10n.ContactsListCellAdd.string }

    var changeRequestBtnName: ((String) -> Void)?

    init(name: String = "吖保鸡丁", headImage: UIImage = UIImage(asset: .GuideGenderBoyChosen), changeRequest: ((String) -> Void)? = nil) {

        self.name = name
        self.headImage = headImage
        self.changeRequestBtnName = changeRequest

    }
...
