...
     - parameter message: <#message description#>
     */
    func showViewTitle(viewController: UIViewController? = UIApplication.sharedApplication().keyWindow?.rootViewController, title: String = "", message: String) {

        let alertView = UIAlertController(title: title, message: message, preferredStyle: .Alert)

        let defaultAction = UIAlertAction(title: "OK", style: .Cancel, handler: nil)

        alertView.addAction(defaultAction)
    
        viewController?.presentViewController(alertView, animated: true, completion: nil)

    }
...
