...
    
    init(_ decoder: JSONDecoder) throws {
        
        commonMsg = try CommenResponse(decoder)
        
        guard let phoneArray =  decoder["contacts"].array else {
            return
        }
        
        for phone in phoneArray {
            
            phoneList.append(try EmergencyRecord(phone))
            
...
